Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  1.5.7 (unreleased)

      - Much i18n polishing

      - Removed commented out template code for listing all email addresses

      - GhostFolders (and probably also Ghosts) could mess up
        SilvaLayout if they referred to a location with a different
        skin setting than the location in which the GhostFolder is
        accessed (even when just looking at its title). This has now
        been fixed.

  Bugs Fixed:
  
      - Fixed issue 1608 where tab_edit_revoke_approval caused versioning errors
  
      - In the tab_status "set timings" caused an error without saving the changes and returned a wrong tab
          
  1.5.6

      - Made image titles required, since they provide the alt attribute, as 
        requested by two customers.

    Bugs Fixed:

      - Fixed bug in sidebar uplinks where you couldn't jump up and out of a 
        publication.

      - Fixed hover bug in sidebar uplinks.

      - XML export rewrote the urls of links and images on export, which
        was a bad thing. They now have extra rewritten_ attributes, which
        are only used by the xslt rendering.      
      
      - XML export of Silvadocuments with images that have no link attribute
        was broken.

      - Fixed public restriction bug cfr. issue 1588 and 1596

  1.5.5

      - The lookup window respects the reader role again - you can 
        access folders with the lookup window using the reader role.

      - Changed to a more discreet favicon for the public views

      - XSLT renderers did not take virtual hosting situations into account
        when rendering images and links in documents.

      - In 'normal' headings index items were not rendered by the XSLT
        renderers.

      - The full media export now uses a tempfile instead of an in memory 
        stringIO to build the zipfile, hopefully improving memory
        footprint.

    Bugs Fixed:
