@@ -5,6 +5,9 @@ Silva changes
 
   1.5.7 (unreleased)
 
+      - Added a ReferenceLookupWindowField, to store references to zope
+        objects instead of urls.
+
       - Much i18n polishing
 
       - Removed commented out template code for listing all email addresses
